Fix image teasers spacing issues

--- a/src/components/image-teaser/image-teaser.scss
+++ b/src/components/image-teaser/image-teaser.scss
@@ -64,68 +64,72 @@ $image-teaser_gradient-color--dark: $color_background-200 !default;
         }
     }
 
-    &__wrapper--content-under {
-        #{$root}__slide {
-            display: block;
-            margin-bottom: 3rem;
-
-            &--scheme-light {
-                #{$root}__content {
-                    background: $image-teaser_container-background--light;
-                }
-            }
-
-            &--scheme-dark {
-                #{$root}__content {
-                    background: $image-teaser_container-background--dark;
-                }
-            }
-        }
-
-        #{$root}__slide-wrapper {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            overflow: initial;
-        }
-
-        #{$root}__content-wrapper {
-            position: relative;
-            height: 100%;
-            justify-content: center;
-            align-items: stretch;
-            text-align: center;
-            padding: 2rem 2rem 0;
-        }
-
-        #{$root}__content {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            margin: -3rem 0 0;
-            padding: 2rem;
-        }
-
-        #{$root}--items-in-row-2 & {
-            @include media('>=tablet') {
-                #{$root}__slogan {
-                    font-size: 1.95em;
-                }
-
-                #{$root}__description {
-                    font-size: 1.2em;
-                }
-            }
-        }
-
-        #{$root}__cta {
-            margin-top: auto;
-        }
+    &__carousel {
+        overflow: hidden;
     }
 
-    &__slides {
+    &__wrapper {
         margin: -#{$image-teaser_slides-gutter / 2};
         width: calc(100% + #{$image-teaser_slides-gutter});
+
+        &--content-under {
+            #{$root}__slide {
+                display: block;
+                margin-bottom: 3rem;
+
+                &--scheme-light {
+                    #{$root}__content {
+                        background: $image-teaser_container-background--light;
+                    }
+                }
+
+                &--scheme-dark {
+                    #{$root}__content {
+                        background: $image-teaser_container-background--dark;
+                    }
+                }
+            }
+
+            #{$root}__slide-wrapper {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                overflow: initial;
+            }
+
+            #{$root}__content-wrapper {
+                position: relative;
+                height: 100%;
+                justify-content: center;
+                align-items: stretch;
+                text-align: center;
+                padding: 2rem 2rem 0;
+            }
+
+            #{$root}__content {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                margin: -3rem 0 0;
+                padding: 2rem;
+            }
+
+            #{$root}--items-in-row-2 & {
+                @include media('>=tablet') {
+                    #{$root}__slogan {
+                        font-size: 1.95em;
+                    }
+
+                    #{$root}__description {
+                        font-size: 1.2em;
+                    }
+                }
+            }
+
+            #{$root}__cta {
+                margin-top: auto;
+            }
+        }
     }
 
     &__slide {
